--- a/projects/login.html
+++ b/projects/login.html
@@ -1,5 +1,7 @@
 <html lang="en"> 
 <head>
+  <script>src = "/Users/harivansh/Documents/School/CS3203/testweb/routes/login.js" </script>
+
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="app.css">
@@ -11,13 +13,14 @@
   <h1> YOOOOOOO 
   </h1>
 <div class="subscribe-container">
-  <form method="POST">
+  <form 
+  method="POST">
 
     <input type="text" name="youremail" placeholder="Name" required>
     <input type="password" name="yourname" placeholder="Text" required>
-    <input class="subscribe-button" type="submit" value="Log in">
+    <input class="subscribe-button" type="submit" value="Log in" >
   </form>
 </div>
 </body>
-<script> src = "login.js" </script>
+
 </html>
