--- a/projects/login.html
+++ b/projects/login.html
@@ -11,7 +11,7 @@
   <h1> YOOOOOOO 
   </h1>
 <div class="subscribe-container">
-  <form action="http://localhost:3000/login" id = "form"
+  <form action="/login" id = "form"
   method="POST">
     <label for = "yourem"> Email</label><br>
     <input id = "yourem" type="text" name="email" placeholder="Name" required>
@@ -23,5 +23,9 @@
 </div>
 
 </body>
+<script>function MyFunction(){
+  alert('Hello World!');
+}
+window.onload=MyFunction;</script>
 
 </html>
