Co-authored-by: isabelanajera <isabelanajera@users.noreply.github.com> Co-authored-by: Safia <Safia666@users.noreply.github.com>

--- a/projects/login.html
+++ b/projects/login.html
@@ -8,7 +8,7 @@
   <title>html form</title>
 </head>
 <body>
-  <h1> YOOOOOOO 
+  <h1> Login 
   </h1>
 <div class="subscribe-container">
   <form action="/login" id = "form"
@@ -23,9 +23,10 @@
 </div>
 
 </body>
-<script>function MyFunction(){
-  alert('Hello World!');
+<script>
+function MyFunction(){
+  alert('Invalid user!');
 }
-window.onload=MyFunction;</script>
+window.onsubmit=MyFunction;</script>
 
 </html>
