--- a/projects/restaurants.html
+++ b/projects/restaurants.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="restaurant-container">
+    <div class="restaurant-container1">
         <h1>Restaurant Name</h1>
         <img src="img_girl.jpg" alt="Girl in a jacket" width="500" height="600">
         <p>Restaurant Description</p>
@@ -15,7 +15,7 @@
         <form action="http://localhost:3000/restaurants" id = "form"
             method="POST">
     <label for = "yourem"> Email</label><br>
-    <input id = "yourem" type="text" name="email" placeholder="Name" required>
+    <input id = "yourem" type="text" name="r1" placeholder="Name" required>
     <label for = "pass"> Password</label><br>
     <input id = "pass" type="password" name="password" placeholder="Text" required>
     <input class="subscribe-button" type="submit" value="Log in" >
